fixing textwrap

--- a/src/components/Divisor/divisor.module.scss
+++ b/src/components/Divisor/divisor.module.scss
@@ -18,5 +18,6 @@
     background-color: var(--global_main_color);
     padding: 0.2rem 4rem;
     border-radius: 2rem;
+    text-wrap: nowrap;
   }
 }
